# yew-boilerplate

./: Cargo.toml  README.md  index.html  tailwind.config.js
assets/css/: tailwindcss.css
src/: lib.rs
