[package]
name = "yew-boilerplate"
version = "0.1.0"
edition = "2021"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "Yew boilerplate"
readme = "README.md"
repository = "https://github.com/fabienbellanger/yew-boilerplate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum-boilerplate-bin"
path = "src/bin/main.rs"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
